--- a/mills/src/jba01/config/agents.yaml
+++ b/mills/src/jba01/config/agents.yaml
@@ -1,8 +1,8 @@
 researcher:
   role: >
-    {topic} Senior News Researcher
+    {topic} Senior Data Researcher
   goal: >
-    Uncover latest news in {topic}
+    Uncover cutting-edge developments in {topic}
   backstory: >
     You're a seasoned researcher with a knack for uncovering the latest
     developments in {topic}. Known for your ability to find the most relevant
@@ -10,7 +10,7 @@ researcher:
 
 reporting_analyst:
   role: >
-    {topic} News Reporting Analyst
+    {topic} Reporting Analyst
   goal: >
     Create detailed reports based on {topic} data analysis and research findings
   backstory: >
