--- a/mills/src/jba01/config/tasks.yaml
+++ b/mills/src/jba01/config/tasks.yaml
@@ -1,8 +1,10 @@
 research_task:
   description: >
-    Search news about {topic}
+    Conduct a thorough research about {topic}
+    Make sure you find any interesting and relevant information given
+    the current year is 2024.
   expected_output: >
-    A list of news articles about {topic} with the title, url, image, and snippet.
+    A list with 10 bullet points of the most relevant information about {topic}
   agent: researcher
 
 reporting_task:
@@ -13,4 +15,3 @@ reporting_task:
     A fully fledge reports with the mains topics, each with a full section of information.
     Formatted as markdown without '```'
   agent: reporting_analyst
-
